--- a/index.html
+++ b/index.html
@@ -31,18 +31,17 @@
         .wrap {
             display: flex;
             gap: 20px;
-            align-items: flex-start;
+            align-items: flex-start
         }
 
         #game {
-            background: var(--panel);        
+            background: var(--panel);
             border-radius: 12px;
             padding: 16px;
             box-shadow: 0 8px 30px rgba(2, 6, 23, .6)
         }
 
         canvas {
-            border: 1px solid green ;
             display: block;
             background: #081226;
             border-radius: 8px
@@ -94,6 +93,28 @@
 
             to {
                 color: #ffffff;
+            }
+        }
+
+        @media(max-width:600px) {
+            body {
+                height: auto;
+                padding: 20px;
+            }
+
+            .wrap {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .sidebar {
+                width: 100%;
+                max-width: 320px;
+            }
+
+            canvas {
+                width: 100% !important;
+                height: auto !important;
             }
         }
     </style>
