Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -102,41 +102,6 @@
             }
 
             body {
-                height: 100vh;
-                overflow: hidden;
-                padding: 8px;
-            }
-
-            .wrap {
-                flex-direction: column;
-                align-items: center;
-                gap: 10px;
-            }
-
-            #game {
-                padding: 10px;
-            }
-
-            .sidebar {
-                width: 100%;
-                max-width: 260px;
-                font-size: 12px;
-            }
-
-            h1 {
-                font-size: 14px;
-            }
-
-            canvas {
-                width: 260px !important;
-                height: 520px !important;
-            }
-
-            #mobile-controls {
-                display: flex !important;
-            }
-
-            body {
                 height: auto;
                 padding: 20px;
             }
@@ -169,7 +134,7 @@
                 <div id="mobile-controls"
                     style="display:none; gap:6px; margin-top:12px; width:100%; justify-content:center; flex-wrap:wrap;">
                     <button id="btn-left">◀</button>
-                    <button id="btn-rotate">▲</button>
+                    <button id="btn-rotate">⤾</button>
                     <button id="btn-right">▶</button>
                     <button id="btn-down">▼</button>
                     <button id="btn-drop">⬇⬇</button>
@@ -187,7 +152,7 @@
                 <strong>Mobile Instructions</strong>
                 <div>• Tap ◀ to move left</div>
                 <div>• Tap ▶ to move right</div>
-                <div>• Tap ▲ to rotate the brick</div>
+                <div>• Tap ⤾ to rotate the brick</div>
                 <div>• Tap ▼ for soft drop</div>
                 <div>• Tap ⬇⬇ for instant hard drop</div>
                 <div class="small">(Swipe gestures are not required — buttons handle all movement.)</div>
